<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextDisplay3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="name1">장발장</string>
    <string name="addr1">서울</string>
    <string name="tel1">010-9000-0001</string>
    
    <string name="name2">코제트</string>
    <string name="addr2">부산</string>
    <string name="tel2">010-9000-0002</string>

</resources>
