<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.young.textdisplay3.MainActivity" >

    <TextView
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00ff00"
        android:gravity="center"
        android:text="@string/name1"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/addr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addr1"
        android:textColor="#ff0000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel1"
        android:textColor="#0000ff"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00ff00"
        android:gravity="center"
        android:text="@string/name2"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/addr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addr2"
        android:textColor="#ff0000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel2"
        android:textColor="#0000ff"
        android:textSize="15dp" />

</LinearLayout>
